// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeView should not have a postfix in the / directory 1`] = `
<div
  className="root"
>
  <div
    className="path"
    title="/"
  >
    /
  </div>
  <div
    className="scrollWrapper"
  >
    <RecursiveInnerTree
      path="/"
    />
  </div>
</div>
`;

exports[`TreeView should render a basic wrapper around RecursiveInnerTree 1`] = `
<div
  className="root"
>
  <div
    className="path"
    title="~/Code/"
  >
    ~/Code/
  </div>
  <div
    className="scrollWrapper"
  >
    <RecursiveInnerTree
      path="~/Code"
    />
  </div>
</div>
`;
